fix: jumping keys during animation

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(0, 165, 165);
     padding: 4px 6px;
+    min-width: 320px;
 }
 .content-container{
     display: flex;
@@ -114,6 +115,6 @@ body{
         width:40%;
     }
     .spec-place{
-        align-items: flex-start;
+        display: none;
     }
 }
